--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 # sonar host
-sonar.host.url=http://localhost:9000
+sonar.host.url=http://127.0.0.1:9000
 
 # must be unique in a given SonarQube instance
-sonar.projectKey=ihara-api-pn
+sonar.projectKey=simple-api-teste
 
 # defaults to project key
-sonar.projectName=IharaAPIPlanoDeNegocio
+sonar.projectName=SimpleAPI
 
 # defaults to 'not provided'
 sonar.projectVersion=1.0
